<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:scrollbarSize="5sp"
    android:background="@drawable/pattern"
    android:padding="8sp"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:scrollbarSize="15sp"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/searchlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/txtsearchProduct"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryHint="Search Item" />
            <ImageView
                android:layout_width="41dp"
                android:layout_height="29dp"
                android:layout_marginTop="13dp"
                android:id="@+id/langchange"
                android:src="@drawable/language" />

            <ImageView
                android:id="@+id/Homesettings"
                android:layout_width="37dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/smimage" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/seedslayout"
            android:layout_width="374dp"
            android:layout_height="167dp"
            android:layout_below="@+id/searchlayout"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:src="@drawable/simp" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/titilliumblack"
                android:gravity="center"
                android:text="@string/seeds"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/machinerylayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seedslayout"
            android:layout_marginTop="30sp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="174dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/amip" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/titilliumblack"
                android:gravity="center"
                android:text="@string/machinery"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/organiclayout"
            android:layout_width="374dp"
            android:layout_height="167dp"
            android:layout_below="@+id/machinerylayout"
            android:layout_marginTop="43dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:src="@drawable/fertilizer" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/titilliumblack"
                android:gravity="center_horizontal"
                android:text="@string/organicfertilizer"
                android:layout_marginTop="30dp"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/farmingguidence"
            android:layout_width="374dp"
            android:layout_height="167dp"
            android:layout_below="@+id/organiclayout"
            android:layout_marginTop="43dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:src="@drawable/playv1" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/titilliumblack"
                android:gravity="center_horizontal"
                android:text="@string/farmingvideos"
                android:layout_marginTop="34dp"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/newsfeed"
            android:layout_width="374dp"
            android:layout_height="167dp"
            android:layout_below="@+id/farmingguidence"
            android:layout_marginTop="43dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:src="@drawable/newsfeed" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/titilliumblack"
                android:gravity="center_horizontal"
                android:text="@string/newsfeed"
                android:layout_marginTop="62dp"
                android:layout_marginLeft="13dp"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/newsfeed"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".HomeActivity">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:layout_margin="40dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/albam"
                android:maxLines="1"
                android:background="@drawable/custombutton"
                android:onClick="logout"
                android:text="Logout" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>